--- a/wp-content/plugins/wp-reading-list/wprl-languages/wp-reading-list.pot
+++ b/wp-content/plugins/wp-reading-list/wprl-languages/wp-reading-list.pot
@@ -6,8 +6,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-reading-list\n"
 "POT-Creation-Date: 2014-02-16 12:44-0500\n"
 "PO-Revision-Date: 2014-02-16 12:44-0500\n"
-"Last-Translator: mstumpf <admin@mikestumpf.com>\n"
-"Language-Team: mstumpf <admin@mikestumpf.com>\n"
+"Last-Translator: mbrittlebank <admin@michaelbrittlebank.com>\n"
+"Language-Team: mbrittlebank <admin@michaelbrittlebank.com>\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
